--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">iiFlashCards</string>
+    <string name="web_client_id" translatable="false">701117525566-igqted6spk354pav5bl4840cm5ptieqg.apps.googleusercontent.com</string>
 </resources>
